[package]
name = "cortex-m4-math"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version="0.7.7", features=["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
critical-section = "1.1.2"
embedded-alloc = { version="0.5.1"}
libm = "0.2.8"
panic-halt = "0.2.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
